# re_patterns

./: .gitignore  README.md  pyproject.toml  setup.py
re_patterns/: __about__.py  __init__.py
src/: __init__.py
src/re_patterns/: __about__.py  __init__.py  version.py
tests/: test_rstr.py
